--- a/src/html/about.html
+++ b/src/html/about.html
@@ -39,5 +39,6 @@
 		
 		@@include('blocks/footer.html')
 		<script src="./js/index.bundle.js"></script>
+		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</body>
 </html>
