--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -38,5 +38,6 @@
 		
 		@@include('blocks/footer.html')
 		<script src="./js/index.bundle.js"></script>
+		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</body>
 </html>
